<resources>
    <string name="app_name">Dal_Course_Review_App</string>
    <string name="email">Email</string>
    <string name="accountExists">Already have an account?</string>
    <string name="password_reset">Reset Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="main_page_title">Dalhousie Course Review</string>
    <string name="redirect_to_signup_btn">Sign Up</string>
    <string name="redirect_to_login_btn">Login</string>
    <string name="main_description">Review courses at Dalhousie University!</string>
    <string name="default_first_name">Johnny</string>
    <string name="default_last_name">Depp</string>
    <string name="sign_up_btn">sign_up_btn</string>
    <string name="default_email">Johnny@Dal.ca</string>
    <string name="default_password">**************</string>
</resources>